# ROS_LLM_agents

./: .gitignore  README.md  howToRun.txt  requirements.txt
.aider.tags.cache.v3/: cache.db
data/: disassembly_manuals.json
devel/: .catkin  .rosinstall
devel/include/llm_agents/: LLMQuery.h  LLMResponse.h  LLMResponseRequest.h  LLMResponseResponse.h
devel/lib/pkgconfig/: llm_agents.pc
devel/lib/python3/dist-packages/llm_agents/: __init__.py
devel/lib/python3/dist-packages/llm_agents/msg/: _LLMQuery.py  __init__.py
devel/lib/python3/dist-packages/llm_agents/srv/: _LLMResponse.py  __init__.py
devel/share/common-lisp/ros/llm_agents/msg/: LLMQuery.lisp  _package.lisp  _package_LLMQuery.lisp  llm_agents-msg.asd
devel/share/common-lisp/ros/llm_agents/srv/: LLMResponse.lisp  _package.lisp  _package_LLMResponse.lisp  llm_agents-srv.asd
devel/share/gennodejs/ros/llm_agents/msg/: LLMQuery.js  _index.js
devel/share/gennodejs/ros/llm_agents/srv/: LLMResponse.js  _index.js
devel/share/llm_agents/cmake/: llm_agents-msg-paths.cmake  llm_agentsConfig.cmake
devel/share/roseus/ros/llm_agents/: manifest.l
devel/share/roseus/ros/llm_agents/msg/: LLMQuery.l
devel/share/roseus/ros/llm_agents/srv/: LLMResponse.l
src/llm_agents/: CMakeLists.txt  package.xml
src/llm_agents/config/: llm_agents_config.yaml
src/llm_agents/launch/: llm_agents.launch
src/llm_agents/msg/: LLMQuery.msg
src/llm_agents/scripts/: llm_agent_node.py
src/llm_agents/srv/: LLMResponse.srv
src/manager_agent/: CMakeLists.txt  package.xml
src/manager_agent/scripts/: manager_agent.py  test_manager_agent.py
src/manager_agent/test/: test_manager_agent.test
src/multi_agent_system/: CMakeLists.txt  package.xml
src/multi_agent_system/launch/: multi_agent_system.launch
src/multi_agent_system/msg/: AgentResponse.msg
src/multi_agent_system/scripts/: agent_responses_logger.py  log_file_path_publisher.py  user_input.py
src/multi_agent_system/srv/: PlanExecution.srv  StabilityAnalysis.srv  ValidateRequest.srv
src/planning_agent/: CMakeLists.txt  package.xml
src/planning_agent/scripts/: planning_agent.py
src/planning_agent/test/: test_planning_agent.py
src/stability_agent/: CMakeLists.txt  package.xml
src/stability_agent/scripts/: stability_agent.py
src/structural_engineer_agent/: CMakeLists.txt  package.xml
src/structural_engineer_agent/scripts/: structural_engineer_agent.py
